# coin-trades-E2E

./: .gitignore  .twitter_keys.yml  EDA.ipynb  bitcoincharts_api.py  pyproject.toml  readme.md
Twitter-API-v2-sample-code-main/Recent-Search/: recent_search.py
coinapp/: bitcoincharts_api.py  coincap_api.py
old_tweets/Twitter-API-v2-sample-code-main/Filtered-Stream/: filtered_stream.py
old_tweets/Twitter-API-v2-sample-code-main/Full-Archive-Search/: full-archive-search.py
old_tweets/Twitter-API-v2-sample-code-main/Recent-Search/: Untitled-1.py  recent_search.py
old_tweets/tweets/: __init__.py  __main__.py
tests/: test_bitcoincharts_api.py  test_tweets.py
