[tool.poetry]
name = "tweets"
version = "0.1.0"
description = ""
authors = ["shaizamzaheer <shaizamzaheer@yahoo.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
searchtweets = "^1.7.6"
requests = "^2.26.0"
requests-oauthlib = "^1.3.0"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
